# source-ibkr-1m-bars

airbyte-integrations/connectors/source-ibkr-1m-bars/: Dockerfile  README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-ibkr-1m-bars/integration_tests/: configured_catalog.json
airbyte-integrations/connectors/source-ibkr-1m-bars/secrets/: config.json
airbyte-integrations/connectors/source-ibkr-1m-bars/source_ibkr_1m_bars/: __init__.py  run.py  source.py  spec.yaml
airbyte-integrations/connectors/source-ibkr-1m-bars/source_ibkr_1m_bars/schemas/: TODO.md  bars.json
airbyte-integrations/connectors/source-ibkr-1m-bars/unit_tests/: test_incremental_streams.py  test_source.py  test_streams.py
